--- a/src/App.css
+++ b/src/App.css
@@ -57,8 +57,9 @@
 }
 
 .correctAnswer {
-  border: 3px solid rgb(6, 240, 15);  
+  border: 3px solid rgb(6, 240, 15);
 }
+
 .incorrectAnswer {
-  border: 3px solid rgb(255, 0, 0);
+  border: 3px solid red;
 }
